# satisbom

./: Cargo.toml  README.md
_doc/: example.json  goals.asciidoc
recipes/: book.xsd  book_update5.json  book_update5.xml
src/: amount.rs  bag.rs  bom.rs  bom_graph.rs  book.rs  colors.rs  constants.rs  error.rs  factory.rs  main.rs  problem.rs  problem_input.rs  problem_output.rs  production.rs  recipe_filter.rs  solver.rs
src/dto/: book_update5.json  filtered_book.rs  full_book.rs  item.rs  mod.rs  recipe.rs  reference_book.rs
src/input/: building.rs  filtered_book.rs  full_book.rs  reactant.rs  recipe.rs  reference_book.rs
src/model/: amount_format.rs  bom.rs  bom_printer.rs  book.rs  building.rs  dot.rs  filtered_book.rs  full_book.rs  item.rs  mod.rs  ratio_approx.rs  reactant.rs  recipe.rs  recipe_complexity.rs
src/model/dto/: book.rs  book_update5.json  building.rs  factory.rs  item.rs  mod.rs  reactant.rs  recipe.rs
