[package]
name = "satisbom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"
good_lp = {version="1.3.1", features = ["lp-solvers"], default-features = false}
#good_lp = {version="1.3.1", features = ["minilp"], default-features = false}
maplit = "1.0.2"
num-traits = "0.2.14"
num-rational = "0.4.0"
term = "0.7.0"
hashlink = "0.7.0"
clap = { version = "3.0.10", features = ["derive"] }
dot = "0.1.4"
tempfile = "3.3.0"